# cp-amm

./: .gitignore  CHANGELOG.md  Cargo.toml  license.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
idls/: jupiter.json  zap.json
libs/jupiter/: Cargo.toml
libs/jupiter/src/: lib.rs
libs/zap/: Cargo.toml
libs/zap/src/: lib.rs
programs/cp-amm/: Cargo.toml
programs/cp-amm/src/: access_control.rs  const_pda.rs  constants.rs  curve.rs  entrypoint.rs  error.rs  event.rs  lib.rs  macros.rs
rust-sdk/: Cargo.toml
rust-sdk/src/: calculate_init_sqrt_price.rs  quote.rs
rust-sdk/src/tests/: test_calculate_init_sqrt_price.rs
tests/: addLiquidity.test.ts  alphaVaultWithSniperTax.test.ts  claimFee.test.ts  claimPositionFee.test.ts  createConfig.test.ts  createCustomizePool.test.ts  createPool.test.ts  createPosition.test.ts  createTokenBadge.test.ts  dynamicConfig.test.ts  frozenRewardVault.test.ts  layoutCompatiable.test.ts  lockPosition.test.ts  marketCapFeeScheduler.test.ts  permissionLessTransferHook.test.ts  pinocchioSwap.test.ts  pinocchioSwapErrorCode.test.ts  rateLimiter.test.ts  removeLiquidity.test.ts  rewardByAdmin.test.ts  rewardByCreator.test.ts  splitPosition.test.ts  splitPosition2.test.ts  swap.test.ts  testMaxFee.test.ts  updatePoolFees.test.ts  zapProtocolFees.test.ts
tests/helpers/: accounts.ts  alphaVault.ts  common.ts  constants.ts  cpAmm.ts  feeCodec.ts  index.ts  math.ts  rateLimiterUtils.ts  svm.ts  token.ts  token2022.ts  zapUtils.ts
tests/helpers/idl/: dlmm.json  dlmm.ts
tests/helpers/transferHook/: index.ts  (+1 more)
(+75 files in other folders)
