[workspace]
members = ["programs/*", "rust-sdk"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { git = "https://github.com/solana-foundation/anchor.git", branch = "master", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/solana-foundation/anchor.git", branch = "master" }
anchor-client = { git = "https://github.com/solana-foundation/anchor.git", branch = "master" }
bytemuck = { version = "1.20.0"}
