[package]
name = "rust-sdk"
version = "0.1.0"
edition = "2021"
description = "cp-amm sdk"
authors = ["minh <minh@raccoons.dev>"]

[dependencies]
anyhow = "1.0.71"
alloy-primitives = "0.8"
cp-amm = { path = "../programs/cp-amm", features=["no-entrypoint", "no-custom-entrypoint"] }

[dev-dependencies]
bytemuck = { workspace = true}
